# aktualizr

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.adoc  thirdparty.spdx
.github/workflows/: brew_build.yml  ci.yml  codeql.yml  update-docker.yml
ci/gitlab/: .gitlab-ci.yml
cmake-modules/: Findswupdate.cmake
config/: CMakeLists.txt  posix-secondary-config.json  posix-secondary.toml  sota-device-cred-hsm.toml  sota-device-cred.toml  sota-secondary.toml  sota-shared-cred.toml
config/sql/: schema.sql
config/sql/migration/: migrate.26.sql
config/sql/rollback/: rollback.26.sql
docker/: Dockerfile.debian.bookworm  Dockerfile.debian.bullseye  Dockerfile.debian.trixie  Dockerfile.ubuntu.bionic  Dockerfile.ubuntu.focal
docs/doxygen/: CMakeLists.txt  INDEX.md
include/: CMakeLists.txt  libaktualizr-c.h
include/libaktualizr/: CMakeLists.txt  aktualizr.h  campaign.h  config.h  events.h  packagemanagerinterface.h  results.h  secondary_provider.h  secondaryinterface.h  types.h
partial/: CMakeLists.txt
partial/asn1/: tiny-asn1.c  tiny-asn1.h
partial/libuptiny/: common_data_api.h  crypto_api.h  firmware.c  firmware.h  manifest.c  targets.c  utils.c  utils.h
partial/libuptiny-demo/: Makefile  common_data.c  crypto.c  main.c  state.c
partial/tests/: test_crypto.cc
scripts/: build-and-test-bookworm.sh  build-and-test-bullseye.sh  build-and-test-trixie.sh  build-and-test.sh  clang-tidy-wrapper.sh  export_to_hsm.sh  get-garage-sign.py  get_version.sh  make_src_archive.sh  publish_github_docs.sh  publish_github_rls.py  run_docker_test.sh  test.sh
src/: CMakeLists.txt
src/aktualizr_get/: CMakeLists.txt  get.cc  main.cc
src/aktualizr_info/: CMakeLists.txt  aktualizr_info_config.cc  aktualizr_info_config.h  aktualizr_info_test.cc  main.cc
src/aktualizr_primary/: CMakeLists.txt  main.cc  primary_secondary_registration_test.cc  secondary.cc  secondary.h  secondary_config.cc  secondary_config.h
src/aktualizr_primary/torizon/: CMakeLists.txt  device_data_proxy.cc  device_data_proxy.h  update_events.cc  update_events.h  update_lock.cc  update_lock.h
src/aktualizr_repo/: repo.cc
src/aktualizr_secondary/: CMakeLists.txt  aktualizr_secondary.cc  aktualizr_secondary.h  aktualizr_secondary_config.cc  aktualizr_secondary_config.h  aktualizr_secondary_config_test.cc  aktualizr_secondary_file.cc  aktualizr_secondary_file.h  aktualizr_secondary_metadata.cc  aktualizr_secondary_ostree.cc  aktualizr_secondary_ostree.h  aktualizr_secondary_ostree_test.cc  aktualizr_secondary_test.cc  main.cc  msg_handler.h  secondary_rpc_test.cc  secondary_tcp_server.cc  secondary_tcp_server.h  update_agent.h  update_agent_file.cc  update_agent_file.h  update_agent_ostree.cc  update_agent_ostree.h
src/cert_provider/: CMakeLists.txt  cert_provider_shared_cred_test.cc  cert_provider_test.cc  main.cc
src/external_secondaries/: CMakeLists.txt  example_flasher.cc  interface_main.cc  test_isotp_interface.cc  test_isotp_interface.h  validate_secondary_interface_test.cc
src/hash_root_poc/: CMakeLists.txt  hash_root_poc.h  main.cc
src/libaktualizr/: CMakeLists.txt  aktualizr.pc.in
src/libaktualizr-c/: libaktualizr-c.cc
src/libaktualizr-posix/: ipuptanesecondary.cc  ipuptanesecondary.h
src/libaktualizr/package_manager/: CMakeLists.txt  fetcher_test.cc  ostreemanager.cc  ostreemanager.h  ostreemanager_test.cc  packagemanagerconfig.cc  packagemanagerfactory.cc  packagemanagerfake.cc  packagemanagerfake.h  packagemanagerfake_test.cc  packagemanagerinterface.cc  raucmanager.cc  raucmanager.h  raucmanager_test.cc  swupdatemanager.cc  swupdatemanager.h
src/libaktualizr/storage/: CMakeLists.txt  fsstorage_read.cc  fsstorage_read.h  invstorage.cc  invstorage.h  schema_migration_test.sh  sql_utils.h  sqlstorage.cc  sqlstorage.h  sqlstorage_base.cc  sqlstorage_base.h  sqlstorage_test.cc  storage_atomic_test.cc  storage_common_test.cc  storage_exception.h
src/libaktualizr/uptane/: CMakeLists.txt  director_test.cc  directorrepository.cc  directorrepository.h  exceptions.h  fetcher.cc  fetcher.h  imagerepository.cc  imagerepository.h  isotpsecondary.cc  isotpsecondary.h  iterator.cc  iterator.h  manifest.cc  manifest.h  metawithkeys.cc  role.cc  root.cc  secondary_metadata.cc  secondary_metadata.h  secondaryconfig.h  tuf.cc  tuf.h  tuf_test.cc  uptane_cancellation_test.cc  uptane_delegation_test.cc  uptane_network_test.cc  uptane_ostree_test.cc  uptane_test.cc  uptane_update_failure_test.cc  uptanerepository.cc  uptanerepository.h
src/sota_tools/: CMakeLists.txt  check.cc  deploy.cc  deploy.h  deploy_test.cc  (+25 more)
src/swupdate_poc/: CMakeLists.txt  main.cc  swupdate_poc.h  swupdate_poc_test.cc
src/torizon/dockercompose_secondary/: CMakeLists.txt  command_runner.cc  command_runner.h  command_runner_test.cc  compose_manager.cc  compose_manager.h  dockercompose_secondary_test.cc  dockercomposesecondary.cc  dockercomposesecondary.h  dockerofflineloader.cc  dockerofflineloader.h  dockertarballloader.cc  dockertarballloader.h
src/torizon/dockercompose_secondary/tests/: CMakeLists.txt  dockercomposeofflineloader_standalone.cc  dockertarballloader_standalone.cc
src/torizon/generic_secondary/: CMakeLists.txt  generic_secondary_test.cc  torizongenericsecondary.cc  torizongenericsecondary.h
src/virtual_secondary/: CMakeLists.txt  bad_rotation_test.cc  managedsecondary.cc  managedsecondary.h  virtual_secondary_test.cc  virtualsecondary.cc  virtualsecondary.h
tests/: CMakeLists.txt  aktualizr.supp  aktualizr_cycle_simple.cc  device_cred_prov_hsm_test.py  device_cred_prov_test.py  httpfake.cc  httpfake.h  ipsecondary_ostree_test.py  ipsecondary_rotation_test.py  ipsecondary_test.py  metafake.cc  metafake.h  run_certprovider_test.sh  run_expired_test.sh  run_import_clash_test.sh  run_vector_tests.sh  shared_cred_prov_test.py  test_aktualizr_kill.py  test_customrepo_failure.py  test_fixtures.py  test_install_aktualizr_and_update.sh  test_io_failure.py  test_ostree_custom_uri.py  test_treehub_failure.py  test_utils.cc  uptane_test_common.h  uptane_vector_tests.cc
(+164 files in other folders)
