# Target: dockertarballloader (run 'make dockertarballloader' to build it)
add_executable(dockertarballloader EXCLUDE_FROM_ALL dockertarballloader_standalone.cc)
target_link_libraries(dockertarballloader aktualizr_lib torizon_dockercompose_secondary)
aktualizr_source_file_checks(dockertarballloader_standalone.cc)

# Target: dockercomposeofflineloader (run 'make dockercomposeofflineloader' to build it)
add_executable(dockercomposeofflineloader EXCLUDE_FROM_ALL dockercomposeofflineloader_standalone.cc)
target_link_libraries(dockercomposeofflineloader aktualizr_lib torizon_dockercompose_secondary)
aktualizr_source_file_checks(dockercomposeofflineloader_standalone.cc)
